fix menu position mobile

--- a/src/components/Navigation/Navbar.module.scss
+++ b/src/components/Navigation/Navbar.module.scss
@@ -45,9 +45,9 @@ ul,li {
     display: flex;
     flex-direction: column;
     position: absolute;
-    transform: translate(-300px, 190px);
+    top:94px;
+    left:0px;
     width: 100%;
-    // text-align: center;
     z-index: 1;
     background-color: rgba(0, 0, 0,0.9);
     border-top:3px solid #bd5100;
